# djenealog

./: .mergify.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  Pipfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
djenealog/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  svg.py  tables.py  tree3d.py  urls.py  views.py
djenealog/management/commands/: import_csv.py  import_wikidata.py
djenealog/migrations/: 0001_initial.py  0002_auto_20180326_0038.py  0002_order_lieux.py  0003_auto_20180326_0043.py  0003_nullbooleanfield.py  0004_alter_individu_epouse_alter_individu_usage_and_more.py  0004_auto_20180326_0052.py  0005_auto_20180326_0053.py  0006_delete_lieu.py  0007_auto_20180326_0240.py  0008_auto_20180328_0114.py  0009_auto_20180401_1609.py  0009_individu_wikidata.py  0010_divorce.py  0011_merge_20180405_2048.py  0012_auto_20180405_2225.py  0013_auto_20180405_2234.py  0014_couple_debut_fin.py  0015_commentaires.py  0016_lieu.py  0017_lieux.py  0018_evenements_lieux.py  0018_wikidata.py  0019_drop_old_lieu.py  0019_evenements_lieux.py  0020_populate_lieux.py  0020_rename_new_lieu.py  0021_drop_old_lieu.py  0022_rename_new_lieu.py
djenealog/static/js/: viz-lite.js
djenealog/static/js/tofi/: client.js  server.js
djenealog/templates/djenealog/: annivs.html  couple_filter.html  couple_form.html  evenement_form.html  graph.gv  graph.html  home.html  individu_filter.html  individu_form.html  lieu_list.html  mariage_form.html  stats.html  tables.html  timenets.html
testproject/: settings.py  urls.py  wsgi.py
testproject/templates/: base.html
