[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_django = "django"
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Genealogy app for Django"
license = "BSD-2-Clause"
name = "djenealog"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
certifi = "^2025.4.26"
django-filter = "^25.1"
django-leaflet = "^0.31.0"
django-select2 = "^8.4.1"
django-tables2 = "^2.7.5"
ipython = "^8.36.0"
ndh = "^6.10.1"
python = "^3.10"
redis = "^5.2.1"
wikidata = "^0.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.8"
pre-commit = "^4.2.0"
ruff = "^0.11.7"
safety = {allow-prereleases = true, version = "^3.2.14"}

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"
psycopg2 = "^2.9.10"

[tool.ruff]
allowed-confusables = [" "]
extend-exclude = ["migrations"]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "COM", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py310"

[tool.tomlsort]
all = true
