[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_django = "django"
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Genealogy app for Django"
license = "BSD-2-Clause"
name = "djenealog"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
certifi = "^2026.2.25"
django-filter = "^25.1"
django-leaflet = "^0.33.0"
django-select2 = "^8.4.8"
django-tables2 = "^2.8.0"
ipython = "^8.39.0"
ndh = "^6.11.0"
python = "^3.10"
redis = "^7.2.1"
wikidata = "^0.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
coverage = "^7.13"
pre-commit = "^4.5.1"
ruff = "^0.15.4"
safety = {allow-prereleases = true, version = "^3.7.0"}

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^25.3.0"
psycopg2 = "^2.9.11"

[tool.ruff]
extend-exclude = ["migrations"]

[tool.ruff.lint]
allowed-confusables = [" "]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "COM", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
